@@ -187,3 +187,15 @@ end
 Then /^the text for list item (\d+) should be "([^\"]*)"$/ do |list_item_num, text|
   @elements[list_item_num.to_i - 1].text.should == text
 end
+
+When /^I select the unordered list with class "([^\"]*)"$/ do |class_name|
+  @elements = @page.unordered_list_elements(:class => class_name)
+end
+
+Then /^I should have (\d+) unordered lists$/ do |num_unordered_lists|
+  @elements.size.should == num_unordered_lists.to_i
+end
+
+Then /^the text for the first item in unordered list (\d+) should be "([^\"]*)"$/ do |ul_num, text|
+  @elements[ul_num.to_i - 1][0].text.should == text
+end
