@@ -509,6 +509,21 @@ module PageObject
     end
 
     #
+    # Finds all unordered lists that match the identifier
+    #
+    # @param [Hash] identifier how we find an unordered list.  You can use a multiple paramaters
+    #   by combining of any of the following except xpath.  The valid keys are:
+    #   * :class => Watir and Selenium
+    #   * :id => Watir and Selenium
+    #   * :index => Watir and Selenium
+    #   * :name => Watir and Selenium
+    #   * :xpath => Watir and Selenium
+    #
+    def unordered_list_elements(identifier)
+      platform.unordered_lists_for(identifier.clone)
+    end
+
+    #
     #  Finds an ordered list
     #
     # @param [Hash] identifier how we find an ordered list.  You can use a multiple paramaters
