@@ -196,6 +196,12 @@ describe PageObject::ElementLocators do
       element = watir_page_object.unordered_list_element(:id => 'blah')
       element.should be_instance_of PageObject::Elements::UnorderedList
     end
+
+    it "should find all unordered lists" do
+      watir_browser.should_receive(:uls).with(:id => 'blah').and_return([watir_browser])
+      elements = watir_page_object.unordered_list_elements(:id => 'blah')
+      elements[0].should be_instance_of PageObject::Elements::UnorderedList 
+    end
     
     it "should find an ordered list" do
       watir_browser.should_receive(:ol).with(:id => 'blah').and_return(watir_browser)
@@ -441,6 +447,12 @@ describe PageObject::ElementLocators do
       selenium_browser.should_receive(:find_element).with(:id, 'blah').and_return(selenium_browser)
       element = selenium_page_object.unordered_list_element(:id => 'blah')
       element.should be_instance_of PageObject::Elements::UnorderedList
+    end
+
+    it "should find all unordered lists" do
+      selenium_browser.should_receive(:find_elements).with(:id, 'blah').and_return([selenium_browser])
+      elements = selenium_page_object.unordered_list_elements(:id => 'blah')
+      elements[0].should be_instance_of PageObject::Elements::UnorderedList 
     end
     
     it "should find an ordered list" do
